# chebgate

./: LICENSE  README.md  pyproject.toml
core/: __init__.py  droppath.py  fp32.py  hashing.py  io.py  parse.py  power.py  seed.py  state_dict.py  sync.py
metrics/: __init__.py  exactness.py  fairness.py  gate.py  latency.py  learning_curve.py  macs.py  params.py
model/: __init__.py  blocks.py  chebconv.py  net.py
scripts/: order_mixing_program.py  run.py
training/: __init__.py  augment.py  loop.py
